--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         }
         .animate-pop { animation: pop 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
         
+        @keyframes bounce-short {
+          0%, 100% { transform: translateY(0); }
+          50% { transform: translateY(-4px); }
+        }
+        .animate-bounce-short { animation: bounce-short 1.5s infinite ease-in-out; }
+
         .toon-shadow {
           box-shadow: 0 8px 0 rgba(0,0,0,0.1);
         }
