--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>MONEY11 - Play & Earn Nigeria</title>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        theme: {
+          extend: {
+            gridTemplateColumns: {
+              '15': 'repeat(15, minmax(0, 1fr))',
+            },
+            gridTemplateRows: {
+              '15': 'repeat(15, minmax(0, 1fr))',
+            }
+          }
+        }
+      }
+    </script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Montserrat:wght@700;900&display=swap" rel="stylesheet">
     <style>
         body {
